# backend-challenge-django

./: README.md  pyproject.toml
api/: urls.py
project/: settings.py  urls.py
